--- a/default/css/style.css
+++ b/default/css/style.css
@@ -404,3 +404,55 @@ tr:hover .module-actions {
 tr:hover .module-badge {
 	opacity: 1;
 }
+
+/* Bash Colors */
+div.terminal {
+	top: 48px;
+	left: 213px;
+	bottom: 0;
+	right: 0;
+	background: #282c34;
+	color: #dcdfe4;
+	box-shadow: inset 0px 2px 10px rgba(0, 0, 0, .25);
+}
+
+div.terminal div.output {
+	height: calc(100% - 30px);
+	overflow: auto;
+	padding: 15px;
+	line-height: 14px;
+	font-size: 12px;
+	font-family: 'Cascadia Mono';
+}
+
+div.terminal div.output span[data-color] {
+
+}
+
+div.terminal div.output span[data-color="33"] {
+	color: #e5c07b;
+}
+
+div.terminal div.output span[data-color="0;32"] {
+	color: #9bc67c;
+}
+
+div.terminal div.output span[data-color="1;34"] {
+	color: #6ab0eb;
+}
+
+div.terminal div.output span[data-color="31;31"] {
+	color: #ff8b92;
+}
+
+div.terminal div.output span[data-color="90"] {
+	color: #b2bccf;
+}
+
+div.terminal div.output span[data-color="35"] {
+	color: #df8ff6;
+}
+
+div.terminal div.output span[data-color="38;5;202"] {
+	color: #e5c07b;
+}
