--- a/default/css/style.css
+++ b/default/css/style.css
@@ -417,7 +417,7 @@ div.terminal {
 }
 
 div.terminal div.output {
-	height: calc(100% - 30px);
+	height: calc(100% - 35px);
 	overflow: auto;
 	padding: 15px;
 	line-height: 14px;
@@ -426,7 +426,7 @@ div.terminal div.output {
 }
 
 div.terminal div.output span[data-color] {
-
+	
 }
 
 div.terminal div.output span[data-color="33"] {
@@ -455,4 +455,13 @@ div.terminal div.output span[data-color="35"] {
 
 div.terminal div.output span[data-color="38;5;202"] {
 	color: #e5c07b;
+}
+
+div.terminal input[name="command"] {
+	height: 35px;
+	width: 100%;
+	background: rgba(255, 255, 255, 0.2);
+	border: 0;
+	padding: 10px;
+	color: #FFFFFF;
 }
