Some fixes, adding module language handling, adding security-fixes for PHP class

--- a/default/fonts/material-icons/material-icons.css
+++ b/default/fonts/material-icons/material-icons.css
@@ -21,3 +21,11 @@
 	-webkit-font-feature-settings: 'liga';
 	-webkit-font-smoothing: antialiased;
 }
+
+.material-icons.small {
+	font-size: 14px;	
+}
+
+.material-icons.middle {
+	vertical-align: text-bottom;
+}
