--- a/default/css/style.css
+++ b/default/css/style.css
@@ -88,6 +88,20 @@ main {
 	box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
 }
 
+.navbar-nav {
+	margin-right: 15px;
+}
+
+.nav-account .dropdown-menu {
+	position: absolute;
+	right: 0;
+	left: inherit;
+}
+
+.nav-account .picture {
+	margin-right: 5px;
+}
+
 /* Breadcrumb */
 .breadcrumb {
 	font-size: 24px;
