--- a/default/css/style.css
+++ b/default/css/style.css
@@ -38,9 +38,8 @@ main {
 }
 
 .sidebar {
-	position: fixed;
-	height: calc(100% - 34px) !important;
-	width: 320px;
+	z-index: 1000;
+	min-width: 320px;
 }
 
 .sidebar .nav-link {
@@ -83,6 +82,7 @@ main {
 .navbar-brand {
 	padding-top: .75rem;
 	padding-bottom: .75rem;
+	min-width: 320px !important;
 	font-size: 1rem;
 	background-color: rgba(0, 0, 0, .25);
 	box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
