--- a/default/css/style.css
+++ b/default/css/style.css
@@ -163,6 +163,13 @@ main {
 	padding: 15px 50px;
 }
 
+/* Nav Badges */
+.nav-link .badge {
+    padding: 10px 7px;
+    line-height: 0;
+    margin: -3px 0 4px 5px;
+    position: relative;
+}
 
 /*
 
