Fix Module loading

--- a/default/css/style.css
+++ b/default/css/style.css
@@ -529,6 +529,11 @@ div.terminal input[name="command"] {
 	overflow: auto;
 }
 
+.left .contentbar {
+	right: unset;
+	left: calc(280px + 39px);
+}
+
 ul.tree {
 	list-style-type: none;
 	margin: 0;
@@ -636,6 +641,14 @@ li.empty::before {
     margin: 0 280px 0 0;
 	max-width: 100vw;
 	overflow: hidden;
+}
+
+.contentbar-content.left {
+	margin: 0 0 0 280px;
+}
+
+.page-header.left {
+	margin: 0 0 0 280px;
 }
 
 /* Tabs */
