Add display-Method for modules, fix some style

--- a/default/css/style.css
+++ b/default/css/style.css
@@ -682,3 +682,25 @@ li.empty::before {
 	font-weight: bold;
 	border-color: var(--bs-border-color) var(--bs-body-bg) var(--bs-border-color) var(--bs-border-color);
 }
+
+.check-group {
+	flex-flow: nowrap;
+	flex: 1 0 auto;
+	align-content: space-around;
+	justify-items: center;
+}
+
+.check-group .form-check {
+	display: flex;
+	justify-content: center;
+	align-self: center;
+	flex: 1 1 auto;
+	width: 1%;
+	min-width: 0;
+	margin: 0;
+	background-color: var(--bs-tertiary-bg);
+	border: var(--bs-border-width) solid var(--bs-border-color);
+	border-radius: var(--bs-border-radius);
+	border-top-right-radius: 0;
+	border-bottom-right-radius: 0;
+}
