Fix repos, adding private repo handling, start develop Modules-Installer on Panel

--- a/default/css/global.css
+++ b/default/css/global.css
@@ -31,3 +31,8 @@ input:focus {
 	border-color: transparent !important;
 	cursor: normal !important;
 }
+
+.text-justify {
+    text-align: justify;
+    text-justify: inter-word;
+}
