--- a/default/css/style.css
+++ b/default/css/style.css
@@ -1,3 +1,11 @@
+/*
+ * fruithost | OpenSource Hosting
+ *
+ * @author Adrian Preuß
+ * @version 1.0.0
+ * @license MIT
+*/
+
 /* DEBUG */
 .xdebug-error, .xdebug-var-dump {
     z-index: 9999999999;
@@ -60,6 +68,31 @@ main {
         bottom: 0px;
         max-height: calc(100% - 49px);
     }
+}
+
+/* Loading / Fetching */
+[data-fetching="true"] {
+    display: flex;
+    justify-content: center !important;
+}
+
+[data-fetching="true"] [role="status"] {
+    display: block;
+    width: 5rem;
+    height: 5rem;
+    margin: 50px 0;
+}
+
+[data-fetching="false"] [role="status"] {
+    display: none;
+}
+
+[data-fetching="true"] .loaded-content {
+    display: none;
+}
+
+[data-fetching="false"] .loaded-content {
+    display: block;
 }
 
 .sidebar .nav-link {
@@ -756,4 +789,47 @@ li.empty::before {
 
 .tree > .list-group-item:first-child {
     border-top-width: 0;
+}
+
+/* Module Info */
+div#module_info .module-icon {
+    font-size: 100px;
+}
+
+div#module_info .carousel-caption {
+    right: 0;
+    bottom: 0;
+    left: 0;
+    color: #fff !important;
+    background: rgba(0, 0, 0, 0.5);
+}
+
+div#module_info div.markdown {
+    background: var(--bs-modal-footer-border-color);
+    padding: 20px;
+    font-size: 16px;
+}
+
+div#module_info div.markdown h1 {
+    font-size: 1.4rem;
+}
+
+div#module_info div.markdown h2 {
+    font-size: 1.3rem;
+}
+
+div#module_info div.markdown h3 {
+    font-size: 1.2rem;
+}
+
+div#module_info div.markdown h4 {
+    font-size: 1.1rem;
+}
+
+div#module_info div.markdown h5 {
+    font-size: 1.0rem;
+}
+
+div#module_info div.markdown h6 {
+    font-size: 0.9rem;
 }
